# print-cost

./: .gitignore  Dockerfile  README.md  dataset-generator-log.txt  hello.py  main.py  print-cost.code-workspace  process.txt  pyproject.toml  requirements.txt
datasets/: 300dpi-6-cluster-with-label.csv  300dpi_cmy_multiply_by_150_percent.csv  Sample.pdf.docx  clustered_cmy_k_agglomerative_300dpi.csv  clustered_cmy_sum_agglomerative_300dpi.csv  cmyk-by-dpi-anti-aliasing.csv  cmyk-by-dpi.csv  cmyk_base_antialiasing.csv  cmyk_by_dpi_and_render_options.csv  dataset-generator.py  label_k6_5dpi.csv  result-log.csv
models/: agglomerative_clustering_cmy_k_300_dpi.pkl  kmeans.pkl  kmeans_and_scaler.pkl  price_label.json  random_forest_classifier_c_m_y_k_sum_5_dpi.pkl  random_forest_classifier_c_m_y_k_sum_5_dpi_small.pkl  random_forest_classifier_c_m_y_k_sum_5_dpi_small_v2.pkl  random_forest_classifier_c_m_y_k_sum_5_dpi_v2.pkl  xgboost_98.64_cmy_k_cmyk_7_dpi.pkl
notebook/: 01-pdf-to-image-converting-research.ipynb  01-pdf-to-image-converting-research.slides.html  02.1-compare-cmyk-percentage-among-different-dpi.ipynb  03-classification-using-random-forest-classifier.ipynb  03-classification-using-xgboost.ipynb  04-model-inference.ipynb  06-research-for-1-dpi.ipynb  Generate-images-from-a-pdf-file.ipynb  Untitled.ipynb  choosing-the-dpi-for-performance.ipynb  choosing_dpi_part2.ipynb  clustering-image.ipynb  cmyk_base_antialiasing.csv  extract-each-cmyk-channels.ipynb  generate-cmyk-dataset.ipynb  pdf-to-image-converting-research.ipynb
src/: flask_old_main.py  helper.py  (+1 more)
(+15 files in other folders)
