[project]
name = "print-cost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.3",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pymupdf>=1.24.13",
    "pypdfium2>=4.30.0",
    "scikit-learn>=1.5.2",
]
