[project]
name = "print-cost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "numpy==1.24.3",
    "pandas>=2.1.0",
    "pymupdf==1.24.12",
    "scikit-learn==1.3",
    "xgboost==2.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
]
